--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@picocss/pico": "^1.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
